book-import/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: httpd-test-acm
  name: httpd-test-acm
spec:
  replicas: 2
  selector:
    matchLabels:
      name: httpd-test-acm
  template:
    metadata:
      labels:
        name: httpd-test-acm
    spec:
      containers:
      - image: docker.io/openshift/hello-openshift
        name: httpd-test-acm
        ports:
        - containerPort: 8080
          name: http-server
