book-import/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-test-acm
  labels:
    name: httpd-test-acm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: httpd-test-acm
