book-import/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-test-acm
  labels:
    name: httpd-test-acm
spec:
  path: "/"
  to:
    kind: Service
    name: httpd-test-acm
